--- a/src/main/resources/devicevars.properties
+++ b/src/main/resources/devicevars.properties
@@ -2,4 +2,4 @@
 2126=Galaxy-S9
 
 # ImWohnzimmer
-2127=TX-NR646,LG--webOS-TV-UF8509,i7-8700k
+2127=192.168.178.22,192.168.178.21,192.168.178.58,TX-NR646,LG--webOS-TV-UF8509,i7-8700k
